# k-means-Comparaci-n

./: README.md  map.html  sample.html
K-Mmeans_I/: PruebasK-means.xlsx
K-Mmeans_I/K-measP/: CMakeLists.txt  clusters.html
K-Mmeans_I/K-measP/source/: main.cpp
K-Mmeans_I/k-meansS/: CMakeLists.txt  clusters.html  ejemplo.txt
K-Mmeans_I/k-meansS/source/: main.cpp
